...

  static UserData fromSnapshot(DocumentSnapshot documentSnapshot) {
    try {
      return UserData(
        name: documentSnapshot['name'],
        surname: documentSnapshot['surname'],
        username: documentSnapshot['username'],
        email: documentSnapshot['email'],
        imagePath: documentSnapshot['imageUrl'],
        categories: (documentSnapshot['selectedCategories'] as List<dynamic>)
            .map((categoryMap) => categoryMap['value'].toString())
            .toList()
            .cast<String>(),
...
