...
                                              0.6
                                          : MediaQuery.of(context).size.height *
                                              0.5,
                                      child: Image.asset(
                                          'assets/images/no_news_found.png'),
                                    ),
                              const Text("No news found",
                                  style: TextStyle(
                                    color: CupertinoColors.systemGrey,
                                    fontSize: 20,
                                    fontWeight: FontWeight.bold,
                                  )),
                              const SizedBox(height: 20),
...
